2008-03-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, doc/plugins.dox:
   Update documentation for plugin_key_group[] to mention declaring it
   manually.


2008-03-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.html, doc/geany.txt, src/search.c:
   Use monospace font for text entry fields in search dialogs and add
   a notice how to change the used font (#1907117).
 * src/plugins.c: Don't load all available plugins on startup, it's only
                  necessary opening the plugin manager.
 * src/keyfile.c, src/search.c:
   Use the default values for various tools if they don't exist in the
   config file instead of using g_find_program_in_path(), patch by
   Yura Siamashka (thanks).
   Fix executable check for grep command.
 * scintilla/include/Makefile.am, src/Makefile.am, plugins/Makefile.am,
   tagmanager/include/Makefile.am, Makefile.am, geany.pc.in,
   configure.in:
   Install header files and add a pkg-config file for external plugins.
 * geany.glade, src/interface.c:
   Add missing accelerator for string "Toggle All Additional Widgets".
 * plugins/htmlchars.c: Use a separate string for keybinding label to
                        avoid display of an underscore.
 * src/callbacks.c, src/tools.c: Fix compiler warnings about
                                 uninitialized variables.


2008-03-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/keybindings.c, src/keybindings.h,
   src/tools.c, src/prefs.c, src/plugindata.h, src/callbacks.c,
   src/plugins.c, src/main.c, doc/plugins.dox, plugins/filebrowser.c,
   plugins/htmlchars.c:
   Merge plugin-keybindings branch:
   Change keybindings code to use keybinding groups, each with a
   separate enum set, which will make the plugin ABI more stable, and
   lay the groundwork for plugin keybindings support.
   Note: this breaks the plugin API.
   Rename keybindings_cmd() to keybindings_send_command(), which now